debugging, commenting out large portions to find the bug causing horrible loops

--- a/roverReceiver/platformio.ini
+++ b/roverReceiver/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:adafruit_feather_m0]
 platform = atmelsam
-lib_debs =
-  RadioHead
+;lib_debs =
+;  RadioHead
 board = adafruit_feather_m0
 framework = arduino
