--- a/robotRemote/platformio.ini
+++ b/robotRemote/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:adafruit_feather_m0]
 platform = atmelsam
-lib_debs =
+lib_deps =
   Adafruit seesaw Library
   RadioHead
 board = adafruit_feather_m0
