--- a/roverReceiver/platformio.ini
+++ b/roverReceiver/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:adafruit_feather_m0]
 platform = atmelsam
-lib_deps =
-  RadioHead
+; lib_deps =
+;   RadioHead
 board = adafruit_feather_m0
 framework = arduino
